fix tests not using preview flag